force-app/main/default/objects/ssot__ContentDocumentVersion__dlm/fields/ssot__ChecksumText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChecksumText__c</fullName>
    <label>Checksum</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChecksumText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>