force-app/main/default/objects/ssot__ContentDocumentVersion__dlm/fields/ssot__ContentDocumentPublishStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContentDocumentPublishStatus__c</fullName>
    <label>Content Document Publish Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContentDocumentPublishStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>