force-app/main/default/objects/ssot__ContentDocumentVersion__dlm/fields/ssot__ContentUrl__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContentUrl__c</fullName>
    <label>Content URL</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContentUrl</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>