force-app/main/default/objects/ssot__ContentDocumentVersion__dlm/fields/ssot__FirstPublishLocationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FirstPublishLocationId__c</fullName>
    <label>First Publish Location</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FirstPublishLocationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>