force-app/main/default/objects/ssot__ContentDocumentVersion__dlm/fields/ssot__IsLatest__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsLatest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Latest</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsLatest</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>