force-app/main/default/objects/ssot__ContentDocumentVersion__dlm/fields/ssot__OwnerId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OwnerId__c</fullName>
    <label>OwnerId</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OwnerId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>