force-app/main/default/objects/ssot__ContentDocumentVersion__dlm/fields/ssot__rel_1724325734623_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724325734623_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContentDocumentVersion_ContentDocume_rel</label>
    <referenceTo>ssot__ContentDocument__dlm</referenceTo>
    <relationshipLabel>ContentDocumentVersion_ContentDocume_rel</relationshipLabel>
    <relationshipName>rel_1724325734623_end</relationshipName>
    <type>Lookup</type>
</CustomField>