force-app/main/default/objects/ssot__ContentDocumentVersion__dlm/fields/ssot__rel_1724325769767_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724325769767_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContentDocumentVersion_CreatedById_m_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>ContentDocumentVersion_CreatedById_m_rel</relationshipLabel>
    <relationshipName>rel_1724325769767_end</relationshipName>
    <type>Lookup</type>
</CustomField>