force-app/main/default/objects/ssot__ContentDocumentVersion__dlm/fields/ssot__VersionDataText__c.field-meta.xml
<CustomField>
    <fullName>ssot__VersionDataText__c</fullName>
    <label>VersionData</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VersionDataText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>